[package]
name = "examples2"
resolver = "2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
arc-swap.workspace = true
async-trait.workspace = true
axum.workspace = true
bcs.workspace = true
bytes.workspace = true
chrono.workspace = true
consensus-core.workspace = true
consensus-config.workspace = true
count-min-sketch.workspace = true
dashmap.workspace = true
diffy = { version = "0.3", default-features = false }
either.workspace = true
enum_dispatch.workspace = true
eyre.workspace = true
futures.workspace = true
im.workspace = true
indexmap.workspace = true
itertools.workspace = true
jsonrpsee.workspace = true
lru.workspace = true
mockall.workspace = true
num_cpus.workspace = true
object_store.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
rand.workspace = true
roaring.workspace = true
rocksdb.workspace = true
reqwest.workspace = true
scopeguard.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
signature.workspace = true
static_assertions.workspace = true
tap.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "tracing", "test-util"] }
tokio-retry.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
twox-hash.workspace = true
fastcrypto.workspace = true
narwhal-config.workspace = true
narwhal-types.workspace = true
sui-types.workspace = true
sui-swarm-config.workspace = true
mysten-network.workspace = true
sui-core.workspace = true
base64.workspace = true
